[gd_scene load_steps=7 format=4 uid="uid://cyptfcrxg17lf"]

[ext_resource type="Script" path="res://scripts/UI/settings.gd" id="1_664ft"]
[ext_resource type="Texture2D" uid="uid://bevd7dwedlm1q" path="res://resources/UI/GUI_4x.png" id="1_ega55"]
[ext_resource type="FontFile" uid="uid://dmgtjvyjyw1nb" path="res://resources/UI/Habbo.ttf" id="2_0bp4i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2o6w3"]
texture = ExtResource("1_ega55")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0

[sub_resource type="TileSet" id="TileSet_3gw2k"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_2o6w3")

[sub_resource type="LabelSettings" id="LabelSettings_7crbw"]
font = ExtResource("2_0bp4i")
font_size = 22
font_color = Color(1, 1, 1, 0.588235)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_664ft")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="CanvasLayer"]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAABAAIAAAAAAAEAAAACAAEAAAABAAAAAAACAAIAAAABAAEAAAARAAwAAAABAAEAAAARAA0AAAABAAIAAAASAAwAAAACAAEAAAASAA0AAAACAAIAAAARAAEAAAABAAAAAAARAAIAAAABAAEAAAASAAEAAAACAAAAAAASAAIAAAACAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAIAAAACAAwAAAABAAEAAAACAA0AAAABAAIAAAADAAEAAAABAAAAAAAEAAEAAAABAAAAAAAFAAEAAAABAAAAAAAGAAEAAAABAAAAAAAHAAEAAAABAAAAAAAIAAEAAAABAAAAAAAJAAEAAAABAAAAAAAKAAEAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAABAAAAAAAPAAEAAAABAAAAAAAQAAEAAAABAAAAAAADAA0AAAABAAIAAAAEAA0AAAABAAIAAAAFAA0AAAABAAIAAAAGAA0AAAABAAIAAAAHAA0AAAABAAIAAAAIAA0AAAABAAIAAAAJAA0AAAABAAIAAAAKAA0AAAABAAIAAAALAA0AAAABAAIAAAAMAA0AAAABAAIAAAANAA0AAAABAAIAAAAOAA0AAAABAAIAAAAPAA0AAAABAAIAAAAQAA0AAAABAAIAAAASAAMAAAACAAEAAAASAAQAAAACAAEAAAASAAUAAAACAAEAAAASAAYAAAACAAEAAAASAAcAAAACAAEAAAASAAgAAAACAAEAAAASAAkAAAACAAEAAAASAAoAAAACAAEAAAASAAsAAAACAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAAAAAEAAAABAAcAAAAAAAEAAAABAAgAAAAAAAEAAAABAAkAAAAAAAEAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAACAAgAAAABAAEAAAACAAkAAAABAAEAAAACAAoAAAABAAEAAAACAAsAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAADAAgAAAABAAEAAAADAAkAAAABAAEAAAADAAoAAAABAAEAAAADAAsAAAABAAEAAAADAAwAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAEAAgAAAABAAEAAAAEAAkAAAABAAEAAAAEAAoAAAABAAEAAAAEAAsAAAABAAEAAAAEAAwAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAFAAgAAAABAAEAAAAFAAkAAAABAAEAAAAFAAoAAAABAAEAAAAFAAsAAAABAAEAAAAFAAwAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAGAAgAAAABAAEAAAAGAAkAAAABAAEAAAAGAAoAAAABAAEAAAAGAAsAAAABAAEAAAAGAAwAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAHAAgAAAABAAEAAAAHAAkAAAABAAEAAAAHAAoAAAABAAEAAAAHAAsAAAABAAEAAAAHAAwAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAIAAgAAAABAAEAAAAIAAkAAAABAAEAAAAIAAoAAAABAAEAAAAIAAsAAAABAAEAAAAIAAwAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAJAAgAAAABAAEAAAAJAAkAAAABAAEAAAAJAAoAAAABAAEAAAAJAAsAAAABAAEAAAAJAAwAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAAKAAgAAAABAAEAAAAKAAkAAAABAAEAAAAKAAoAAAABAAEAAAAKAAsAAAABAAEAAAAKAAwAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAALAAgAAAABAAEAAAALAAkAAAABAAEAAAALAAoAAAABAAEAAAALAAsAAAABAAEAAAALAAwAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAAMAAgAAAABAAEAAAAMAAkAAAABAAEAAAAMAAoAAAABAAEAAAAMAAsAAAABAAEAAAAMAAwAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAANAAgAAAABAAEAAAANAAkAAAABAAEAAAANAAoAAAABAAEAAAANAAsAAAABAAEAAAANAAwAAAABAAEAAAAOAAIAAAABAAEAAAAOAAMAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAOAAgAAAABAAEAAAAOAAkAAAABAAEAAAAOAAoAAAABAAEAAAAOAAsAAAABAAEAAAAOAAwAAAABAAEAAAAPAAIAAAABAAEAAAAPAAMAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAPAAcAAAABAAEAAAAPAAgAAAABAAEAAAAPAAkAAAABAAEAAAAPAAoAAAABAAEAAAAPAAsAAAABAAEAAAAPAAwAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAABAAEAAAAQAAYAAAABAAEAAAAQAAcAAAABAAEAAAAQAAgAAAABAAEAAAAQAAkAAAABAAEAAAAQAAoAAAABAAEAAAAQAAsAAAABAAEAAAAQAAwAAAABAAEAAAARAAMAAAABAAEAAAARAAQAAAABAAEAAAARAAUAAAABAAEAAAARAAYAAAABAAEAAAARAAcAAAABAAEAAAARAAgAAAABAAEAAAARAAkAAAABAAEAAAARAAoAAAABAAEAAAARAAsAAAABAAEAAAA=")
tile_set = SubResource("TileSet_3gw2k")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer"]
offset_left = 36.0
offset_top = 34.0
offset_right = 604.0
offset_bottom = 443.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="SettingsContainer" type="VBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="VideoLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
text = "Window
"
label_settings = SubResource("LabelSettings_7crbw")

[node name="MobileCheckBox" type="CheckBox" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
custom_minimum_size = Vector2(230, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 24
text = "Mobile Controls"
alignment = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
custom_minimum_size = Vector2(230, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 24
button_pressed = true
text = "Windowed Fullscreen"
alignment = 2

[node name="AudioLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
text = "
Audio"
label_settings = SubResource("LabelSettings_7crbw")

[node name="MusicContainer" type="HBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/MusicContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 22
text = "Music volume"

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
scrollable = false

[node name="SFXContainer" type="HBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/SFXContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 22
text = "SFX volume"

[node name="SFXSlider" type="HSlider" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
scrollable = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer"]
layout_mode = 2
text = "
Controls"
label_settings = SubResource("LabelSettings_7crbw")

[node name="ControlsLabel2" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 22
text = "Player 1"
vertical_alignment = 2

[node name="P1ActionList" type="VBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ControlsLabel" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer2"]
layout_mode = 2
text = "
Controls"
label_settings = SubResource("LabelSettings_7crbw")

[node name="ControlsLabel2" type="Label" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 22
text = "Player 2"
vertical_alignment = 2

[node name="P2ActionList" type="VBoxContainer" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
visible = false
layout_mode = 2

[node name="ResetButton" type="Button" parent="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 24
text = "Reset to Defaults"

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 5.0
offset_right = 94.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("2_0bp4i")
theme_override_font_sizes/font_size = 24
text = "Back (esc)
"

[connection signal="toggled" from="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/MobileCheckBox" to="." method="on_mobile_check_box_toggled"]
[connection signal="toggled" from="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/FullscreenCheckBox" to="." method="on_fullscreen_check_box_toggled"]
[connection signal="value_changed" from="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/MusicContainer/MusicSlider" to="." method="on_music_slider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/SFXContainer/SFXSlider" to="." method="on_sfx_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/ScrollContainer/MarginContainer/SettingsContainer/ResetButton" to="." method="on_reset_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
